libycp/testsuite/tests/double_module.err
[Scanner] tests/double_module.ycp:5 Syntax error: module must be the first statement.
