libycp/testsuite/tests/double_module.ycp
{
    module "NameOfModule";

    global define f() ``{
	module "Again";

	return 0;
    }
}
